
      \item The meaning of \code{install.packages(dependencies = TRUE)}
      has changed: it now means to install the essential dependencies of
      the named packages plus the \samp{Suggests}, but only the
      essential dependencies of dependencies.  To get the previous
      behaviour, specify \code{dependencies} as a character vector.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
       \item \command{R CMD check} now gives a warning rather than a
       note if it finds inefficiently compressed datasets.  With
       \command{bzip2} and \command{xz} compression having been
       available since \R 2.10.0, it only exceptionally makes sense to
       not use them.

       The environment variable \env{_R_CHECK_COMPACT_DATA2_} is
       no longer consulted: the check is always done if
       \env{_R_CHECK_COMPACT_DATA_} has a true value (its default).

       \item Where multiple sub-architectures are to be tested,
       \command{R CMD check} now runs the examples and tests for all the
       sub-architectures even if one fails.

       \item \command{R CMD check} can optionally report timings on
       various parts of the check: this is controlled by environment
       variable \env{_R_CHECK_TIMINGS_} documented in \sQuote{Writing R
	 Extensions}.  Timings (in the style of \command{R CMD BATCH} are
       given at the foot of the output file from running each test and
       the \R code in each vignette.

       \item There are new options for more rigorous testing by
       \command{R CMD check} selected by environment variables -- see
       the \sQuote{Writing R Extensions} manual.

       \item \command{R CMD check} now warns (rather than notes) on
       undeclared use of other packages in examples and tests:
       increasingly people are using the metadata in the
       \file{DESCRIPTION} file to compute information about packages,
       for example reverse dependencies.

       \item The defaults for some of the options in \command{R CMD